# video-streamer

./: .gitignore  .gitmodules  CMakeLists.txt
lib/gl/include/glad/: glad.h
lib/gl/src/: glad.c
src/: audio_source.cpp  audio_source.h  circular_buffer.h  fps_counter.cpp  fps_counter.h  main.cpp  pbo.cpp  pbo.h  streamer.cpp  streamer.h  string_utils.h  video_source.cpp  video_source.h
